# glsl-compiler

./: CMakeLists.txt  README.md  out.ll  pypto-gpu.patch
docs/: compat.md  ir-mapping.md  roadmap.md  subset.md
examples/: example.comp  minimal.comp
examples/compute-tests/: case02_axpy.comp  case03_reciprocal.comp  case04_branch_even_odd.comp  case05_for_loop_iter.comp  case06_two_buffers.comp  case07_vec4_buffer.comp  case08_uint_buffer.comp  case09_shared_memory.comp  case10_2d_dispatch.comp
include/ast/: ast.h
include/codegen/: hir_codegen.h  todo_module.h
include/hir/: hir.h  lowering.h
include/parser/: lexer.h  parser.h  token.h
include/sema/: semantic_analyzer.h  symbol_table.h  type.h  type_system.h
lib/: CMakeLists.txt
lib/codegen/: hir_codegen.cpp  todo_module.cpp
lib/hir/: hir_dump.cpp  lowering.cpp
lib/lexer/: lexer.cpp
lib/parser/: ast_dump.cpp  parser.cpp
lib/sema/: semantic_analyzer.cpp  symbol_table.cpp  type_system.cpp
tests/: CMakeLists.txt  check_ir_file.cmake  todo_module_test.cpp
tests/codegen/: CMakeLists.txt  codegen_test.cpp
tests/diff/: CMakeLists.txt  cases.json  run_diff_tests.py
tests/diff/shaders/: diff_global_id_y.comp  diff_if_else.comp  diff_less_than_operator.comp  diff_multi_buffer_field.comp  diff_vec_constructor_and_swizzle.comp  diff_while_loop.comp  fail_duplicate_definition.comp  fail_type_mismatch.comp  fail_undefined_symbol.comp  ok_layout_xyz.comp
tests/e2e/: CMakeLists.txt  check_compute_ir.cmake
tests/hir/: CMakeLists.txt  hir_test.cpp
tests/parser/: CMakeLists.txt  lexer_test.cpp  parser_test.cpp
tests/sema/: CMakeLists.txt  sema_test.cpp
tools/: CMakeLists.txt
tools/glsl2llvm/: CMakeLists.txt  main.cpp
